# origenlab

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  render.yaml
apps/api/: AGENTS.md  Dockerfile  README.md  pyproject.toml
apps/api/docs/: API-3_PHASE1_MIRROR_ROUTE_DESIGN.md  API-3_PHASE2_PARITY_CHECKLIST.md  API-3_PHASE6B_STABILIZATION.md  API-3_PHASE6_LEGACY_REMOVAL_COMPLETE.md  API-3_RELOCATION_AUDIT.md  API_RESPONSE_CONTRACT.md  PORTFOLIO_DEMO_GUIDE.md  README.md
apps/api/scripts/: api3_phase5a_deletion_audit.sh  api3_phase6_grep_allowlist.phase6_target.txt  api3_phase6_grep_allowlist.txt  api3_phase6_grep_gate.sh  audit_response_contract.py  check_runtime_dependency_boundary.py  dashboard_v1_http_smoke.py  db3f_http_smoke.py  mirror_parity_smoke.py  remote_latency_audit.py  remote_response_audit.py  remote_smoke.sh  run_mirror_dual_server_parity.sh  validate.sh
apps/api/tests/: conftest.py  test_api_backend.py  test_api_response_contract.py  test_cases_warm.py  test_cases_warm_api_regression.py  test_cases_warm_output_normalize.py  test_contacts_detail.py  test_dashboard_v1_smoke_script.py  test_demo_safe_schemas.py  test_emails_recent.py  test_equipment_opportunities_repository.py  test_health.py  test_http_security.py  test_import_guard.py  test_no_write_policy.py  test_operator_automation_status_route.py  test_operator_status.py  test_opportunities_equipment.py  test_path_redaction.py  test_postgres_contact.py  test_postgres_email.py  test_postgres_equipment.py  test_postgres_recent_emails.py  test_postgres_warm_cases.py  test_remote_latency_audit_script.py  test_remote_response_audit_script.py  test_request_id.py  test_response_contract_audit_script.py  test_response_model_coverage.py  test_runtime_dependency_boundary.py  test_validate_script_policy.py  test_warm_case_classification.py  test_warm_case_postgres_normalize_filter.py
apps/email-pipeline/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dashboard-postgres.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements-lock.txt
apps/email-pipeline/alembic/: README.md  env.py
apps/email-pipeline/apps/: business_mart_app.py
apps/email-pipeline/config/: origenlab_marketing_outreach_input.example.csv  origenlab_pilot_input.example.csv  tatiana_pilot_input.example.csv  tatiana_senders.example.txt  voice_sender_domains.txt
apps/email-pipeline/docs/: APP_CONTEXT.md  ARCHITECTURE.md  BUSINESS_CONTEXT.md  CONTACT_READINESS_AUDIT.md  CRUD_SAFETY.md  DATA_LOCATIONS.md  DEEP_RESEARCH_AUTOMATION_PLAN.md  DEPENDENCY_GROUPS.md  EXPERIMENTAL_PARKED.md  OPERATOR_CHEAT_SHEET.md  OPERATOR_COMMAND_SURFACE.md  OUTBOUND_SOURCE_OF_TRUTH.md  PHASE0_LOCAL_POSTGRES_MIRROR.md  PHASE1_CLOUD_READ_PATH.md  QUALITY_AND_REFACTOR_STRATEGY.md  README.md  REFRESH_RENDER_DASHBOARD_ONCE.md  REPORTING.md  REPRODUCIBILITY.md  RUNBOOK.md  RUN_BUSINESS_FILTER.md  SCRIPT_INVENTORY.md  SCRIPT_MAP.md  SHARED_UTILITY_CONTRACTS.md  TATIANA_LAB_BOUNDARY.md
apps/email-pipeline/prompts/: deep_research_netnew_chile_marketing.txt  light_research_netnew_chile_marketing.txt
apps/email-pipeline/reports/: README.md
apps/email-pipeline/scripts/: README.md  _bootstrap.py  _script_warnings.py  audit_equipment_opportunity_keys.py  audit_lead_org_quality.py  build_lead_account_rollup.py  import_supplier_workbook.py  match_lead_accounts_to_existing_orgs.py  validate.sh  validate_lead_account_rollup.py  validate_supplier_workbook.py
apps/email-pipeline/tests/: gmail_sent_history_seed.py  removal_evidence.py  test_active_current_manifest.py  test_active_stack_docs.py  test_alembic_archive_migration.py  test_alembic_initial_migration.py  test_alembic_mart_canonical_mirror.py  test_alembic_mart_core_dashboard.py  test_alembic_mart_document_master.py  test_alembic_outbound_export_audit_migration.py  test_alembic_outbound_sidecar_migration.py  test_api_classification.py  test_api_commercial_purchase_events.py  test_api_cors.py  test_api_meta.py  test_api_slice1.py  test_apply_ready8_contact_patch.py  test_approve_reviewed_deepsearch_rows.py  test_archive_lane_outbound_integration.py  test_archive_outreach_queue.py  test_archive_reports_out_generated.py  test_archive_shortlist_commercial_precheck.py  test_attachment_validation.py  test_audit_canonical_contacto_gmail.py  test_audit_canonical_gmail_duplicates.py  test_audit_contacted_universe.py  test_audit_emails_export_gate.py  (+260 more)
(+1192 files in other folders)
