[project]
name = "origenlab-api"
version = "0.1.0"
description = "Read-only operator API (SQLite-first) for OrigenLab email-pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "origenlab-email-pipeline",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
origenlab-email-pipeline = { path = "../email-pipeline", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/origenlab_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
